js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-async-arrow-function-await-import-source-no-new-call-expression.js
DONOTEVALUATE
(
)
;
(
async
(
)
=
>
{
await
new
import
.
source
(
'
<
module
source
>
'
)
}
)
;
